// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`perspective item should render dom 1`] = `
<div>
  <div
    class="perspItem"
  >
    <div
      class="perspTools"
    >
      <span>
        路径
      </span>
      <div>
        <img
          alt="播放"
          src="play.png"
          title="播放"
        />
        <img
          alt="查看"
          src="view.png"
          title="查看"
        />
        <img
          alt="编辑"
          class=""
          src="edit.png"
          title="编辑"
        />
        <img
          alt="更新"
          class=""
          src="update.png"
          title="更新"
        />
        <img
          alt="删除"
          class=""
          src="remove.png"
          title="删除"
        />
        <img
          alt="上移"
          class=""
          src="up.png"
          title="上移"
        />
        <img
          alt="下移"
          class=""
          src="down.png"
          title="下移"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`perspective item should render dom 2`] = `
<div>
  <div
    class="perspItem"
  >
    <div
      class="perspTools"
    >
      <span>
        路径2
      </span>
      <div>
        <img
          alt="查看"
          src="view.png"
          title="查看"
        />
        <img
          alt="编辑"
          class=""
          src="edit.png"
          title="编辑"
        />
        <img
          alt="更新"
          class=""
          src="update.png"
          title="更新"
        />
        <img
          alt="删除"
          class=""
          src="remove.png"
          title="删除"
        />
        <img
          alt="上移"
          class=""
          src="up.png"
          title="上移"
        />
        <img
          alt="下移"
          class=""
          src="down.png"
          title="下移"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`perspective item should render dom 3`] = `
<div>
  <div
    class="perspItem"
  >
    <div
      class="perspTools"
    >
      <span>
        路径2
      </span>
      <div>
        <img
          alt="查看"
          src="view.png"
          title="查看"
        />
        <img
          alt="编辑"
          class=""
          src="edit.png"
          title="编辑"
        />
        <img
          alt="更新"
          class=""
          src="update.png"
          title="更新"
        />
        <img
          alt="删除"
          class=""
          src="remove.png"
          title="删除"
        />
        <img
          alt="上移"
          class=""
          src="up.png"
          title="上移"
        />
        <img
          alt="下移"
          class=""
          src="down.png"
          title="下移"
        />
      </div>
    </div>
    <div
      class="coordContainer"
    >
      <div
        class="coordEditor"
      >
        <div>
          X:
          <input
            step="10"
            type="number"
            value="100"
          />
        </div>
        <div>
          Y:
          <input
            step="10"
            type="number"
            value="100"
          />
        </div>
        <div>
          Z:
          <input
            step="10"
            type="number"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`perspective item should render dom 4`] = `
<div>
  <div
    class="perspItem"
  >
    <div
      class="perspTools"
    >
      <span>
        路径2
      </span>
      <div>
        <img
          alt="查看"
          src="view.png"
          title="查看"
        />
        <img
          alt="编辑"
          class=""
          src="edit.png"
          title="编辑"
        />
        <img
          alt="更新"
          class=""
          src="update.png"
          title="更新"
        />
        <img
          alt="删除"
          class=""
          src="remove.png"
          title="删除"
        />
        <img
          alt="上移"
          class=""
          src="up.png"
          title="上移"
        />
        <img
          alt="下移"
          class=""
          src="down.png"
          title="下移"
        />
      </div>
    </div>
    <div
      class="coordContainer"
    >
      <div
        class="coordEditor"
      >
        <div>
          X:
          <input
            step="10"
            type="number"
            value="100"
          />
        </div>
        <div>
          Y:
          <input
            step="10"
            type="number"
            value="200"
          />
        </div>
        <div>
          Z:
          <input
            step="10"
            type="number"
            value="300"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`perspective item should render dom 5`] = `
<div>
  <div
    class="perspItem"
  >
    <div
      class="perspTools"
    >
      <span>
        路径2
      </span>
      <div>
        <img
          alt="查看"
          src="view.png"
          title="查看"
        />
        <img
          alt="编辑"
          class=""
          src="edit.png"
          title="编辑"
        />
        <img
          alt="更新"
          class=""
          src="update.png"
          title="更新"
        />
        <img
          alt="删除"
          class=""
          src="remove.png"
          title="删除"
        />
        <img
          alt="上移"
          class=""
          src="up.png"
          title="上移"
        />
        <img
          alt="下移"
          class=""
          src="down.png"
          title="下移"
        />
      </div>
    </div>
  </div>
</div>
`;
